<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_toggle_view"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/menu_view_grid"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_filter"
        android:title="@string/menu_filter"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter_all"
        android:title="@string/filter_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter_done"
        android:title="@string/filter_done"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter_pending"
        android:title="@string/filter_pending"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter_failed"
        android:title="@string/filter_failed"
        app:showAsAction="never" />
</menu>
